# SentinelML-Tool

./: .gitignore  .pre-commit-config.yaml  Readme.md  fix_issues.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  tree.txt
.github/workflows/: ci.yml
analysis/: calibration.py
benchmarks/: comparison.py
docs/: architecture.md
examples/: example_01_traditional_ml.py  example_02_genai_guardrails.py  sklearn_monitoring.py
notebooks/: sentinel_demo.ipynb
sentinelml/: __init__.py  cli.py  core.py  drift.py  familiarity.py  incremental.py  plugins.py  setup.py  trust.py  trust_manifold.py  utils.py  viz.py
sentinelml/adapters/: __init__.py  haystack_adapter.py  huggingface_adapter.py  langchain_adapter.py  llama_index_adapter.py  openai_adapter.py  sklearn_adapter.py  tensorflow_adapter.py  torch_adapter.py
sentinelml/agents/: __init__.py
sentinelml/agents/reasoning/: __init__.py  logic_checker.py  step_consistency.py
sentinelml/agents/state/: __init__.py  budget_manager.py  checkpoint.py
sentinelml/agents/trajectory/: __init__.py  loop_detector.py  step_validator.py  tool_monitor.py
sentinelml/benchmarks/: evaluator.py
sentinelml/core/: __init__.py  base.py  ensemble.py  pipeline.py  report.py  sentinel.py
sentinelml/deep_learning/: __init__.py
sentinelml/deep_learning/adversarial/: __init__.py  boundary_attack.py  fgsm_detector.py
sentinelml/deep_learning/feature_drift/: __init__.py  activation_monitor.py  embedding_drift.py
sentinelml/deep_learning/uncertainty/: __init__.py  base.py  deep_ensembles.py  evidential.py  mc_dropout.py  temperature_scaling.py
sentinelml/genai/: __init__.py
sentinelml/genai/alignment/: __init__.py  bias_detector.py  toxicity_scorer.py
sentinelml/genai/guardrails/: __init__.py  base.py
sentinelml/genai/guardrails/input/: __init__.py  injection_detector.py  intent_classifier.py  pii_detector.py  toxicity_filter.py
sentinelml/genai/guardrails/output/: __init__.py  citation_verifier.py  consistency_check.py  hallucination_detector.py  schema_validator.py
sentinelml/genai/uncertainty/: __init__.py  lexical_similarity.py  semantic_entropy.py  token_logprob.py
sentinelml/infrastructure/: __init__.py
sentinelml/infrastructure/serving/: __init__.py  fastapi_server.py  grpc_server.py
sentinelml/infrastructure/storage/: __init__.py  vector_store.py
sentinelml/infrastructure/streaming/: __init__.py  kafka_consumer.py
sentinelml/rag/: __init__.py
sentinelml/rag/advanced/: __init__.py  claim_verification.py  contradiction_detect.py
sentinelml/rag/end_to_end/: __init__.py  ares_evaluator.py  latency_tracker.py  ragas_metrics.py
sentinelml/rag/generation/: __init__.py  answer_relevance.py  citation_accuracy.py  faithfulness.py
sentinelml/rag/retrieval/: __init__.py  coverage_analyzer.py  diversity_metrics.py  relevance_scorer.py
sentinelml/traditional/: __init__.py
sentinelml/traditional/drift/: __init__.py  adversarial.py  base.py  ks_univariate.py  mmd_detector.py  psi_detector.py
sentinelml/traditional/familiarity/: __init__.py  base.py  hnsw.py  kdtree.py  kernel_density.py
sentinelml/traditional/trust/: __init__.py  base.py  conformal.py  isolation_forest.py  mahalanobis.py  vae_trust.py
sentinelml/utils/: __init__.py  decorators.py  logging.py  types.py  validation.py
tests/: test_sentinel.py
