[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelml"
version = "0.1.0"
description = "Runtime trust layer for machine learning systems"
authors = [{name="Your Name"}]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "matplotlib"
]

[project.scripts]
sentinel = "sentinelml.cli:main"